// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24px;
}

.c3 {
  outline: none;
}

.c1 {
  padding: 8px;
  background-color: #007aff;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  background-size: 40px;
  background-image: url();
}

<div
  className="c0"
>
  <div
    className="c1"
    color="primary"
  >
    <svg
      aria-hidden={true}
      className="c2 c3"
      fill="currentcolor"
      focusable={false}
      height={24}
      role="img"
      tabIndex={-1}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 12c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4zm0 2c-2.7 0-8 1.3-8 4v2h16v-2c0-2.7-5.3-4-8-4z"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar renders initials 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 14px;
}

.c1 {
  padding: 8px;
  background-color: #007aff;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  background-size: 40px;
  background-image: url();
}

<div
  className="c0"
>
  <div
    className="c1"
    color="primary"
  >
    <div
      className="c2"
      fontSize={1}
    >
      WS
    </div>
  </div>
</div>
`;

exports[`Avatar renders mr elon 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0;
}

.c5 {
  color: #4f6f8f;
  font-size: 12px;
}

.c2 {
  padding: 8px;
  background-color: #007aff;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  background-size: 40px;
  background-image: url(https://pbs.twimg.com/media/DwSta0wUcAAQQR9.jpg);
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        color="primary"
        src="https://pbs.twimg.com/media/DwSta0wUcAAQQR9.jpg"
      />
      <div
        class="c3"
      >
        <h5
          class="c4"
        >
          Not Elon Musk
        </h5>
        <div
          class="c5"
          color="text.light"
          font-size="0"
        >
          totally.not.elon@musk.com
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
